Fix camera flashing when animation finishes before server teleports player